First positioning of elements using CSS

--- a/index.html
+++ b/index.html
@@ -13,12 +13,76 @@
      </head>
   <body>
 
-<p>this is a test</p>
+
+<header>
+ 
+    <img  alt="logo" width="" height="">
+
+    <h1> Lauren Anderson Web Dev Portfolio </h1>
+
+    <nav>
 
 
+        <ul>
+            <li><a>Home</a></li>
+            <li><a>About Me</a></li>
+            <li><a>Projects</a></li>
+            <li><a>Contact</a></li>
+
+        </ul> 
+    </nav>
+
+</header>
+<main>
+
+<section class="myContent">
+
+    <h2> About Me </h2>
+
+     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+        mollit anim id est laborum."</p>
 
 
+</section>
 
+<section class="myContent">
+
+    <h2> Projects </h2>
+
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+        mollit anim id est laborum."</p>
+
+</section>
+
+<section class="myContent">
+
+    <h2> Contact </h2>
+
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+        mollit anim id est laborum."</p>
+
+</section>
+
+
+</main>
+
+
+<footer> <p>created by Lauren A.</p></footer>
 
   </body>
 </html>
