--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
         <ul>
-            <li><a>Home</a></li>
-            <li><a>About Me</a></li>
-            <li><a>Projects</a></li>
-            <li><a>Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
 
         </ul> 
     </nav>
@@ -38,6 +38,12 @@
 <section class="myContent">
 
     <h2> About Me </h2>
+
+    <figure>
+
+        <img src="#" alt="Photo of Lauren Anderson">
+
+    </figure>
 
      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
