aside and projects section styling, need to add marging to top of aside

--- a/index.html
+++ b/index.html
@@ -33,9 +33,28 @@
     </nav>
 
 </header>
-<main>
 
-<section class="myContent">
+
+
+
+
+
+
+
+
+
+<div id="mainBody">
+
+    
+
+
+
+
+
+    <main class="aboutMe">
+
+
+    <section class="myContent">
 
     <h2> About Me </h2>
 
@@ -56,37 +75,51 @@
 
 </section>
 
-<section class="myContent">
+<section class="myContent" >
 
     <h2> Projects </h2>
-
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-        mollit anim id est laborum."</p>
-
+<div class="project">
+    <div>Place Holder Project 1</div>
+    <div>Place Holder Project 2</div>
+    <div>Place Holder Project 3</div>
+    <div>Place Holder Project 4</div>
+    <div>Place Holder Project 5</div>
+</div>
 </section>
 
-<section class="myContent">
 
-    <h2> Contact </h2>
-
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-        mollit anim id est laborum."</p>
-
-</section>
 
 
 </main>
 
+</section>
+
+
+
+<aside class="contact">
+    <section>
+
+        <h2> Link With Me </h2>
+    
+    <div class="socialMedia">    
+        <img src="#" alt="social media icon" height="20px" width="20px">
+        <img src="#" alt="social media icon" height="20px" width="20px">
+        <img src="#" alt="social media icon" height="20px" width="20px">
+        <img src="#" alt="social media icon" height="20px" width="20px">
+    </div>
+    </section>
+
+
+
+    <section >
+
+        <h2> Chat With Me </h2>
+        <address>Email:<a href="#">laurenagraphicdesign@gmail.com</a> </address>
+        <address>123 My Street Athens, GA 30625</address>
+    </section>
+
+</aside> 
+</div>
 
 <footer> <p>created by Lauren A.</p></footer>
 
