Aside positioned; Margins added, still needs adjusting; Project place holders sized and positioned

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 <aside class="contact">
-    <section>
+     <section>
 
         <h2> Link With Me </h2>
     
@@ -106,15 +106,15 @@
         <img src="#" alt="social media icon" height="20px" width="20px">
         <img src="#" alt="social media icon" height="20px" width="20px">
         <img src="#" alt="social media icon" height="20px" width="20px">
-    </div>
+    </div> 
     </section>
 
 
 
-    <section >
+    <section class="chat" >
 
         <h2> Chat With Me </h2>
-        <address>Email:<a href="#">laurenagraphicdesign@gmail.com</a> </address>
+        <address>Email:  <a href="#">laurenagraphicdesign@gmail.com</a> </address>
         <address>123 My Street Athens, GA 30625</address>
     </section>
 
