Breakpoints added, sizing should be responsive

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <header>
  
-    <img  alt="logo" width="" height="">
+    
 
-    <h1> Lauren Anderson Web Dev Portfolio </h1>
+    <h1> Lauren Anderson <br> Web Dev Portfolio </h1>
 
     <nav>
 
@@ -79,11 +79,12 @@
 
     <h2> Projects </h2>
 <div class="project">
-    <div>Place Holder Project 1</div>
-    <div>Place Holder Project 2</div>
-    <div>Place Holder Project 3</div>
-    <div>Place Holder Project 4</div>
-    <div>Place Holder Project 5</div>
+    <img src="#" alt="place holder">
+    <img src="#" alt="place holder">
+    <img src="#" alt="place holder">
+    <img src="#" alt="place holder">
+    <img src="#" alt="place holder">
+    <img src="#" alt="place holder">
 </div>
 </section>
 
@@ -97,11 +98,11 @@
 
 
 <aside class="contact">
-     <section>
+     <section class="linkWithMe" >
 
         <h2> Link With Me </h2>
     
-    <div class="socialMedia">    
+    <div class="socialMedia" >    
         <img src="#" alt="social media icon" height="20px" width="20px">
         <img src="#" alt="social media icon" height="20px" width="20px">
         <img src="#" alt="social media icon" height="20px" width="20px">
