Group project link added

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 <div class="project">
    
    <section class="projectCard" id="firstChild" >
-    <header>  Project 1 </header>
-    <a href="#"><img src="./assets/images/digital-revolution.webp" alt="place holder"></a>
+    <header>  AMDB: Actor Movie Database </header>
+    <a href="https://vi3t4lov3.github.io/GRP12-The-Movie-Finder/index.html"><img src="./assets/images/AMDBSreenShot.png" alt="place holder"></a>
    </section>
    
    <section class="projectCard" >
